--- a/src/components/navbar/NavBar.styles.css
+++ b/src/components/navbar/NavBar.styles.css
@@ -109,3 +109,13 @@
   text-decoration: none;
   color: white;
 }
+.fa {
+  font-size: 24px;
+}
+
+.fa-bars {
+  position: relative;
+  display: inline-block;
+  color: white;
+  transition: all 0.3s ease-in-out;
+}
