--- a/src/components/subsection/subSection.styles.css
+++ b/src/components/subsection/subSection.styles.css
@@ -7,10 +7,12 @@
   text-transform: uppercase;
   color: #333;
   text-decoration: none;
-  border-bottom: 3px solid transparent;
+  border: 2px solid #333;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
 }
 
 .subSec:hover {
-  border-bottom: 3px solid #f00;
+  border-color: #f00;
 }
