--- a/src/components/section/section.styles.css
+++ b/src/components/section/section.styles.css
@@ -1,12 +1,12 @@
 .container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 
 .single-column {
-  flex-direction: column;
+  grid-template-columns: 1fr;
 }
-
 .column {
   flex: 1;
   padding: 10px;
