--- a/src/components/subsection/subSection.styles.css
+++ b/src/components/subsection/subSection.styles.css
@@ -8,10 +8,10 @@
   text-transform: uppercase;
   color: #333;
   text-decoration: none;
-  border: 2px solid #333;
   border-radius: 5px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
+  flex: 1 0 45%; /* Changed width to flex for better responsiveness */
+  max-width: 500px;
 }
 
 .subSec:hover {
@@ -31,6 +31,8 @@
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
+  flex: 1 0 45%; /* Same as .subSec */
+  max-width: 500px; /* Same as .subSec */
 }
 
 .nameOfMeal {
@@ -39,16 +41,32 @@
   color: #3c3c3c;
   text-shadow: 1px 1px 0 #eee, 2px 2px 0 #888;
   margin-bottom: 10px;
+  text-align: center; /* Center the element horizontally */
 }
 .descriptionDiv {
   margin-top: 20px;
   padding: 10px;
-  background-color: #f8f8f8;
-  border: 1px solid #ccc;
   border-radius: 5px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  max-width: 800px; /* Added a maximum width to prevent the element from getting too wide */
+  margin: 20px auto;
 }
 .description {
   font-size: 1.1rem;
   color: #555;
   margin-bottom: 10px;
+  margin: 10px 0;
+  text-align: center; /* Center the element horizontally */
+}
+
+.listedDes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0;
+  max-width: 800px; /* Added a maximum width to prevent the element from getting too wide */
 }
