--- a/src/components/subsection/subSection.styles.css
+++ b/src/components/subsection/subSection.styles.css
@@ -27,9 +27,9 @@
   text-transform: uppercase;
   color: #333;
   text-decoration: none;
-  border: 2px solid #333;
+  /* border: 2px solid #333; */
   border-radius: 5px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); */
   transition: border-color 0.3s ease-in-out;
   flex: 1 0 45%; /* Same as .subSec */
   max-width: 500px; /* Same as .subSec */
@@ -59,7 +59,6 @@
   color: #555;
   margin-bottom: 10px;
   margin: 10px 0;
-  text-align: center; /* Center the element horizontally */
 }
 
 .listedDes {
